src/app/components/students/students.component.scss
.sidebar {
  width: 400px;
}

.content {
  margin-bottom: 54px;
  width: calc(100% - 400px);
  overflow-x: hidden;
}

.students-table {
  height: calc(100% - 80px);
}

:host ::ng-deep {
  .modal-header,
  .modal-body {
    padding: 0.25rem 1rem;
  }

  .close {
    margin: 0;
    padding: 0;
    font-size: 2rem;
  }

  .modal-body {
    .form-group {
      margin-bottom: 0.5rem;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;
    }

    .form-group label {
      margin-bottom: 0.25rem;
    }

    .form-control,
    select.form-control:not([size]):not([multiple]) {
      padding: 0.25rem 0.5rem;
      height: 2rem;
    }

    .nav-link {
      padding: 0.5rem;
    }
  }

  .modal-footer {
    padding: 0.75rem 1rem;
  }
}

@media (max-width: 991px) {
  .sidebar {
    width: 0;
    transition: width 0.2s ease;
    z-index: 1000;

    &.open {
      width: 100%;
      position: absolute;
      right: 0;
      height: calc(100% - 54px);
    }
  }
}

